tests/diagnostics/packages/imports/duplicate_local_import_name_with_alias/expect.txt
# exit: 1
main.coppice:2:41: error: duplicate imported name 'Shared'; use an alias
  import workspace/lib/session { Token as Shared }
                                          ^
